--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>GDZIE GRZEBIESZ</h1>
-    <h2>Wypad!</h2>
-    <h3>Powiedziałem raz</h3>
-    <h4>Co dalej tu robisz?</h4>
-    <h5>Zmykaj już</h5>
-    <h6>No ić jusz!</h6>
+ <h1>zmiania</h1>
 </body>
 </html>
