Poczatki powstawania sklepu

--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,57 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title><!--zmiany-->
+    <title>Blura - sklep komputerowy</title>
 </head>
 <body>
- <h1>zmiania</h1>
+    <div class="header">
+        <div class="container">
+            <div class="navbar">
+                 <div class="logo">
+                    <img src="logo.png" width="300px">
+                 </div>
+            </div>
+        </div>
+    </div>
+    <br>
+        <div class ="search">
+            <input type="search">
+            <input type="submit" value="Szukaj">
+        </div>
+        <div class = "navigation">
+        <nav>
+            <ul>
+                <li>Komputery</li>
+                <br>
+                <li>Procesory</li>
+                <br>
+                <li>Karty Graficzne</li>
+                <br>
+                <li>Płyta Główna</li>
+                <br>
+                <li>Dyski</li>
+                <br>
+                <li>Pamięć RAM</li>
+                <br>
+                <li>Zasilacze</li>
+                <br>
+                <li>Obudowy</li>
+                <br>
+                <li>Monitory</li>
+                <br>
+                <li>Myszki</li>
+                <br>
+                <li>Klawiatury</li>
+                <br>
+                <li>Słuchawki</li>
+                <br>
+                <li>Laptopy</li>
+                <br>
+
+            </ul>
+        </nav>
+        <div class="footer">
+            <h3>Strona powstała na zaliczenie Pracy Dyplomowej przez Krzysztofa Świec</h3>
+        </div>
 </body>
 </html>
